# BC-SECURITY-Empire

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  VERSION  changelog  config.yaml  empire  empire.py  install.sh  main.py  pyproject.toml  reset.sh
.github/: ISSUE_TEMPLATE.md  issue-close-app.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: dockerimage.yml  wikisync.yml
data/: test_db.db
data/agent/: agent.ps1  agent.py
data/agent/stagers/: http.ps1  http.py
data/misc/inactive_modules/: redirector.py
data/module_source/code_execution/: Invoke-ReflectivePEInjection.ps1  Invoke-Shellcode.ps1
data/module_source/collection/: Get-Keystrokes.ps1
data/module_source/credentials/: DomainPasswordSpray.ps1  Invoke-InternalMonologue.ps1  Invoke-Mimikatz.ps1
data/module_source/management/: Invoke-ReflectivePEInjection.ps1  Invoke-SocksProxy.psm1
data/module_source/privesc/: Invoke-PrintDemon.ps1  Invoke-SweetPotato.ps1  Invoke-ZeroLogon.ps1  Sherlock.ps1
empire/: arguments.py
empire/client/: client.py  config.yaml  main.py
empire/client/src/: EmpireCliConfig.py  EmpireCliState.py  MenuState.py  ShortcutHandler.py
empire/server/: arguments.py  config.yaml  empire.py  server.py
empire/server/common/: ShellcodeRDI.py  agents.py  bypasses.py  config.py  credentials.py  empire.py  events.py  helpers.py  hooks.py  hooks_internal.py  http.py  listeners.py  messages.py  module_models.py  modules.py  packets.py  plugins.py  stagers.py  users.py
empire/server/csharp/: CHANGELOG.md  Covenant.sln  Program.cs  README.md
empire/server/database/: base.py  defaults.py  models.py
empire/server/listeners/: dbx.py  http.py  http_com.py  http_foreign.py  http_hop.py  http_malleable.py  http_mapi.py  meterpreter.py  onedrive.py  redirector.py  template.py
empire/server/modules/: powershell_template.py  python_template.py
empire/server/plugins/: PLUGINS.md  csharpserver.plugin  csharpserver.py  example.plugin
empire/server/setup/: install.sh  reset.sh
lib/: arguments.py
lib/common/: ShellcodeRDI.py  __init__.py  agents.py  bypasses.py  credentials.py  empire.py  encryption.py  events.py  helpers.py  http.py  listeners.py  messages.py  modules.py  obfuscation.py  packets.py  plugins.py  pylnk.py  stagers.py  users.py
lib/database/: base.py  defaults.py  models.py
lib/listeners/: dbx.py  http.py  http_com.py  http_foreign.py  http_hop.py  http_malleable.py  http_mapi.py  meterpreter.py  onedrive.py  redirector.py  template.py
lib/modules/: powershell_template.py  python_jobs_template.py  python_template.py
lib/stagers/osx/: jar.py  (+11 more)
plugins/: PLUGINS.MD  PLUGINS.md  example.py
setup/: cert.sh  install.sh  requirements.txt  requirements_libssl1.0.txt  reset.sh  setup_database.py
wiki/: Admin-Functionality.md  Agents.md  Configuration.md  Credentials.md  Home.md  Hooks.md  Installation.md  Listeners.md  Module-Development.md  Modules.md  Quickstart.md  RESTful-API.md  Reporting.md  Stagers.md  Staging.md  User-Management.md  _Footer.md  _Sidebar.md
(+941 files in other folders)
