[tool.poetry]
name = "empire-bc-security-fork"
version = "4.0.0"
description = ""
authors = ["BC Security <info@bc-security.org>"]
readme = "README.md"
homepage = "https://github.com/BC-SECURITY/Empire"
repository = "https://github.com/BC-SECURITY/Empire.git"
packages = [
    { include = "empire" },
    { include = "empire/server/**/*.py" },
]

[tool.poetry.dependencies]
python = "^3.7"
urllib3 = "*"
requests = "^2.24.0"
setuptools = "*"
iptools = "*"
pydispatcher = "*"
flask = "*"
macholib = "*"
dropbox = "*"
pyOpenSSL = "*"
pyinstaller = "*"
zlib_wrapper = "*"
netifaces = "*"
M2Crypto = "*"
jinja2 = "*"
cryptography = "*"
pyminifier = "*"
xlutils = "*"
pefile = "*"
bcrypt = "*"
pycrypto = "*"
pyparsing = "*"
PyMySQL = "^0.10.1"
SQLAlchemy = "^1.3.20"
PyYAML = "^5.3.1"
cffi = "1.14.4"
Flask-SocketIO = "^4.3.2"
SQLAlchemy-Utc = "^0.11.0"
prompt-toolkit = "^3.0.9"
terminaltables = "^3.1.0"
docopt = "^0.6.2"
python-socketio = {extras = ["client"], version = "^4.6.0"}
humanize = "^3.2.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
